<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_instructions"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    tools:context="ro.devacademy.mada.bullsandcows.InstructionsActivity">


    <TextView
        android:id="@+id/textView_howtoplay_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_howtoplay"
        android:textSize="30sp"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
         />

    <TextView
        android:id="@+id/textView_GameDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_description"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_below="@+id/textView_howtoplay_title"
        android:layout_marginTop="28dp" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/buttons_sublayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView_GameDescription"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:weightSum="2"
        tools:context="ro.devacademy.mada.bullsandcows.FirstActivity">


        <Button
            android:id="@+id/button_back"
            android:text="@string/button_back"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView_forErrMsgPN"
            android:layout_centerHorizontal="true"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:background="#69b46a"
            />

        <Button
            android:id="@+id/button_play"
            android:text="@string/button_play"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView_forErrMsgPN"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="10dp"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:background="#69b46a"
            />

    </LinearLayout>

</RelativeLayout>
