<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_difficulty"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    tools:context="ro.devacademy.mada.bullsandcows.DifficultyActivity">


    <TextView
        android:id="@+id/textview_for_space"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        />


    <TextView
        android:id="@+id/textView_choose_difficulty"
        android:text="@string/tv_choose_difficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:layout_below="@+id/textview_for_space"
        />

    <Button
        android:id="@+id/button_easy"
        android:text="@string/button_easy"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_choose_difficulty"
        android:layout_centerHorizontal="true"
        android:textColor="#FFFFFF"
        android:background="#69b46a"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        />

    <Button
        android:id="@+id/button_medium"
        android:text="@string/button_medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_easy"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:background="#69b46a"
        />


    <Button
        android:id="@+id/button_hard"
        android:text="@string/button_hard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_medium"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:background="#69b46a"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/pictures_sublayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:weightSum="2"
        tools:context="ro.devacademy.mada.bullsandcows.FirstActivity">


        <ImageView
            android:id="@+id/cow_picture"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_weight="1"
            android:src="@drawable/cow"
            />

        <ImageView
            android:id="@+id/bull_picture"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_weight="1"
            android:src="@drawable/bull"
            />
    </LinearLayout>

</RelativeLayout>
