<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_first"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="ro.devacademy.mada.bullsandcows.FirstActivity">

    <TextView
        android:id="@+id/textview_for_space"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        />

    <Button
        android:id="@+id/button_howtoplay"
        android:text="@string/button_howtoplay"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textview_for_space"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"
        android:textColor="#FFFFFF"
        android:background="#69b46a"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        />

    <Button
        android:id="@+id/button_play"
        android:text="@string/button_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_howtoplay"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:background="#69b46a"
        />


    <Button
        android:id="@+id/button_halloffame"
        android:text="@string/button_halloffame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_play"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:background="#69b46a"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/pictures_sublayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:weightSum="2"
        tools:context="ro.devacademy.mada.bullsandcows.FirstActivity">


        <ImageView
            android:id="@+id/cow_picture"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_weight="1"
            android:src="@drawable/cow"
            />

        <ImageView
            android:id="@+id/bull_picture"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_weight="1"
            android:src="@drawable/bull"
            />
    </LinearLayout>



</RelativeLayout>